# cartan_karlhede

./: CHANGELOG.md  CartanKarlhede.lean  IMPLEMENTATION.md  Justfile  Main.lean  README.md  cartan_kar.tex  lakefile.toml  lean-toolchain  pyproject.toml
docs/: Makefile  api.rst  conf.py  examples.rst  mathematics.rst  tutorial.rst
docs/_build/doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  introduction.doctree  mathematics.doctree  references.doctree  tutorial.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  api.html  examples.html  genindex.html  index.html  installation.html  introduction.html  mathematics.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  tutorial.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/cartan_karlhede/: algorithm.html  cli.html  examples.html  metric.html  simple_examples.html
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt  introduction.rst.txt  references.rst.txt
src/cartan_karlhede/: .cursorrules  __init__.py  __main__.py  algorithm.py  cli.py  examples.py  metric.py  simple_examples.py
tests/: __init__.py  test_metric.py
